(fix): title hard to see. Increase overlay and add outline to name (#485)

--- a/app/src/modules/legacy/components/cards/cards.scss
+++ b/app/src/modules/legacy/components/cards/cards.scss
@@ -66,6 +66,10 @@ minds-card-user, .minds-banner-card{
         line-height: 18px;
         padding: 0;
         margin: 0;
+        text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+      }
+      span {
+        text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
       }
       button{
         margin-top:$minds-margin;
